--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -8,19 +8,26 @@
     <style>
         body {
             height: 100%vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             border: 1px solid blue;
             border-radius: 15px;
             margin: auto;
+            text-align: justify;
+            text-indent: 30px;
+            font-size: 1em;
         }
     </style>
 </head>
@@ -29,6 +36,13 @@
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, asperiores. Culpa, pariatur reiciendis. Quibusdam, nostrum ullam praesentium debitis pariatur cumque ducimus, non consectetur nihil, voluptatum perferendis deserunt eaque quod maiores. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod repellendus fugiat, nulla magni officia optio illum iste asperiores numquam reprehenderit maxime totam minus quis autem dolor enim voluptas necessitatibus. Sint!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et fugiat, saepe eveniet quibusdam consequuntur eaque tempora totam, quidem voluptatem esse quo eum, ratione asperiores! Doloremque nesciunt autem repellat minus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et fugiat, saepe eveniet quibusdam consequuntur eaque tempora totam, quidem voluptatem esse quo eum, ratione asperiores! Doloremque nesciunt autem repellat minus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et fugiat, saepe eveniet quibusdam consequuntur eaque tempora totam, quidem voluptatem esse quo eum, ratione asperiores! Doloremque nesciunt autem repellat minus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et fugiat, saepe eveniet quibusdam consequuntur eaque tempora totam, quidem voluptatem esse quo eum, ratione asperiores! Doloremque nesciunt autem repellat minus!Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et fugiat, saepe eveniet quibusdam consequuntur eaque tempora totam, quidem voluptatem esse quo eum, ratione asperiores! Doloremque nesciunt autem repellat minus!Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et fugiat, saepe eveniet quibusdam consequuntur eaque tempora totam, quidem voluptatem esse quo eum, ratione asperiores! Doloremque nesciunt autem repellat minus!Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et fugiat, saepe eveniet quibusdam consequuntur eaque tempora totam, quidem voluptatem esse quo eum, ratione asperiores! Doloremque nesciunt autem repellat minus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et fugiat, saepe eveniet quibusdam consequuntur eaque tempora totam, quidem voluptatem esse quo eum, ratione asperiores! Doloremque nesciunt autem repellat minus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et fugiat, saepe eveniet quibusdam consequuntur eaque tempora totam, quidem voluptatem esse quo eum, ratione asperiores! Doloremque nesciunt autem repellat minus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et fugiat, saepe eveniet quibusdam consequuntur eaque tempora totam, quidem voluptatem esse quo eum, ratione asperiores! Doloremque nesciunt autem repellat minus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et fugiat, saepe eveniet quibusdam consequuntur eaque tempora totam, quidem voluptatem esse quo eum, ratione asperiores! Doloremque nesciunt autem repellat minus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et fugiat, saepe eveniet quibusdam consequuntur eaque tempora totam, quidem voluptatem esse quo eum, ratione asperiores! Doloremque nesciunt autem repellat minus!</p>
     </main>
 </body>
 </html>
