--- a/RecodePRO/pagina2.html
+++ b/RecodePRO/pagina2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 2</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
@@ -49,6 +50,9 @@
         }
         #botao {
             text-align: center;
+        }
+        label + input {
+            background-color: aqua;
         }
         
     </style>
